fix annoying discord icon shift

--- a/pages/dsns.dev/index.css
+++ b/pages/dsns.dev/index.css
@@ -126,7 +126,6 @@ a {
 		transform: scale(1) !important;
 	}
 	#discordIcon {
-		margin-top: 5px;
 		transform: scale(1.6) !important;
 	}
 }
